# OmenLogic

./: README.md  random.txt
python/: pyproject.toml
web/: deno.json  server.js
web/views/: index.html
