[project]
name = "OmenLogic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "numpy>=2.4.2",
    "tensorflow>=2.20.0",
]

[dependency-groups]
train = [
    "pandas>=3.0.0",
    "matplotlib>=3.10.8",
]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
